Bug 157184 - Double click menu icon does not close window
Summary: Double click menu icon does not close window
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: kdecorations (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 128107 159284 166682 194438 213846 234521 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-02-05 03:41 UTC by Mike M
Modified: 2015-10-24 16:05 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Mike M 2008-02-05 03:41:15 UTC
Version:            (using KDE 3.5.8)
Installed from:    Ubuntu Packages
OS:                Linux

When I double click the menu icon in the upper left corner of a window, the window does not close.  I have the option checked in the Plastik theme configuration to enable this feature.  It seems to require a triple-click to close the window, however.  Double click consistently does nothing (menu opens and then closes, but the window is still there).  Triple click opens the menu, closes the menu, and finally closes the window.

A search turned up a few instances of this in earlier versions (3.1), but it seems like it has reappeared.  (Previous bugs marked RESOLVED.)

Using a fresh install of Kubuntu 7.10 (Feisty) and KDE 3.5.8, with the Plastik theme on a 64-bit system (Intel).
Comment 1 Luciano Montanaro 2008-02-05 11:18:01 UTC
On Tuesday 05 February 2008 03:41:16 Mike M wrote:
[bugs.kde.org quoted mail]

I cannot reproduce with kwin3 in kubuntu hardy... But double ckick works 
erratically on KDE 4.  Is this with kwin3? Or do you use kwin4, by chance?

Luciano
Comment 2 Mike M 2008-02-05 19:53:24 UTC
> I cannot reproduce with kwin3 in kubuntu hardy... But double ckick works
> erratically on KDE 4.  Is this with kwin3? Or do you use kwin4, by chance? 

Using whatever comes with Feisty/KDE 3.5.8, I'm assuming this is kwin3.
Comment 3 Mike M 2008-02-05 19:55:32 UTC
[:~]$ kwin -v
Qt: 3.3.7
KDE: 3.5.8
KWin: 3.0
Comment 4 lucas 2008-06-12 13:26:32 UTC
*** Bug 159284 has been marked as a duplicate of this bug. ***
Comment 5 lucas 2008-06-12 13:28:16 UTC
Applies to KDE 4, three mouse clicks are required to close the window.
Comment 6 lucas 2008-07-16 09:51:16 UTC
*** Bug 166682 has been marked as a duplicate of this bug. ***
Comment 7 Grósz Dániel 2008-07-16 13:29:48 UTC
I can reproduce this with KDE 4.1 beta2 on openSUSE 11.0 (also, double click does not close the window, tripple click required) but not with KDE 3.5.9 (it works as expected).
Comment 8 vinc.man 2008-11-19 10:12:16 UTC
I also have this problem (kubuntu 8.10). Only triple click works.
kwin -v
Qt: 4.4.3
KDE: 4.1.2 (KDE 4.1.2)
KWin: 3.0 (-> kde-window-manager "the kde 4 window manager" installed!?)
Comment 9 gambas 2009-02-09 16:11:10 UTC
The bug is there yet with KDE 4.2 and window plastik decorations.
Comment 10 Dmitry Kochetov 2009-02-11 20:02:37 UTC
I can confirm this bug.  After double click the menu icon window doesn't close.
Qt: 4.4.2;
KDE: 4.2.00;
KDE style and windows decorations - oxygen;
Comment 11 Andrej Krutak 2009-03-21 10:15:21 UTC
Confirming the bug for KDE 4.2.1, decorations plastik and oxygen. Tripple click works, it's pretty annoying though...
Comment 12 Greg Lepore 2009-11-07 15:55:06 UTC
Still occurring on 4.3.3, definitely a KDE paper cut...
Comment 13 lucas 2009-11-09 15:17:50 UTC
*** Bug 213846 has been marked as a duplicate of this bug. ***
Comment 14 Martin Flöser 2009-12-19 14:30:49 UTC
*** Bug 128107 has been marked as a duplicate of this bug. ***
Comment 15 Martin Flöser 2010-04-17 08:26:08 UTC
*** Bug 234521 has been marked as a duplicate of this bug. ***
Comment 16 Martin Flöser 2010-04-17 08:26:26 UTC
*** Bug 194438 has been marked as a duplicate of this bug. ***
Comment 17 Greg Lepore 2010-12-03 17:51:07 UTC
Still exists in 4.5.4, still annoying.
Comment 18 Martin Flöser 2011-01-15 18:04:11 UTC
For Aurorae themes a double click closes the window. I assume it's a bug in the KCommonDecoration library.
Comment 19 GGG 2011-01-15 18:43:23 UTC
(In reply to comment #18)
> For Aurorae themes a double click closes the window. I assume it's a bug in the
> KCommonDecoration library.

Could you please explain where did you get this Aurorae theme? Is it in a standard shipping or can be acquired at kdelook.org? I might want to test if this will work for me.
Comment 20 Thomas Lübking 2011-01-15 21:13:26 UTC
no google in russsia? =P

it's a theme engine, part of kwin since 4.4 - but you need a theme (there're "some" at kde-look)
http://kde-look.org/index.php?xsortmode=high&page=0&xcontentmode=81

@martin
kcommondecoration was apparently prepared for this, but actually nothing but plastique so far ever offered or supoprted such (not even the redmond deco ;-)
Sandro knows, but i don't know whether the plastik stuff is still really maintained - see #194438 (and comment #3 for my opinion on such behaviour of "guess what i'll do, if you touch me here")
Comment 21 Martin Flöser 2011-01-16 09:35:01 UTC
> Could you please explain where did you get this Aurorae theme?
Well I wrote the code for the Aurorae Theme Engine ;-)
> Is it in a standard shipping or can be acquired at kdelook.org?
Yes Aurorae is part of KWin and new Themes can be downloaded through the Get 
New Decorations button in the config dialog.
Comment 22 GGG 2011-01-23 15:19:37 UTC
Yes, I found this theme (there are quite a lot of themes and decorations  
derived from and called like "smth-Aurorae") and indeed, it does not  
suffer from this "triple-click-to-close" issue - two clicks do the work.

On Sat, 15 Jan 2011 23:13:27 +0300, Thomas Lübking   
<thomas.luebking@gmail.com> wrote:

> https://bugs.kde.org/show_bug.cgi?id=157184
>
>
>
>
>
> --- Comment #20 from Thomas Lübking <thomas luebking gmail com>   
> 2011-01-15 21:13:26 ---
> no google in russsia? =P
>
> it's a theme engine, part of kwin since 4.4 - but you need a theme  
> (there're
> "some" at kde-look)
> http://kde-look.org/index.php?xsortmode=high&page=0&xcontentmode=81
>
> @martin
> kcommondecoration was apparently prepared for this, but actually nothing  
> but
> plastique so far ever offered or supoprted such (not even the redmond  
> deco ;-)
> Sandro knows, but i don't know whether the plastik stuff is still really
> maintained - see #194438 (and comment #3 for my opinion on such  
> behaviour of
> "guess what i'll do, if you touch me here")
Comment 23 Martin Flöser 2012-02-16 16:30:32 UTC
Review Request to fix this issue: https://git.reviewboard.kde.org/r/103995/

It would be nice if it can be confirmed to be working :-)
Comment 24 Martin Flöser 2012-02-27 18:28:02 UTC
Git commit 27b667f49562963ea3f13d5b9dd56ff846feb75a by Martin Gräßlin.
Committed on 25/02/2012 at 18:42.
Pushed by graesslin into branch 'master'.

Add delay before showing window menu

The window menu is shown after a strong click on the menu button.
This makes close by double click on menu button working correctly.
A single (strong) click will open the window menu, a double click
will close the menu. A  triple click is no longer required.

REVIEW: 103995
FIXED-IN: 4.9.0

M  +51   -15   kwin/libkdecorations/kcommondecoration.cpp
M  +4    -0    kwin/libkdecorations/kcommondecoration.h

http://commits.kde.org/kde-workspace/27b667f49562963ea3f13d5b9dd56ff846feb75a